# Test fixture — NOT a real publishable package.
# This setup.cfg exists to exercise the toolshed publish pipeline.
[metadata]
name = toolshed-test-publish-pkg
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/py/_test_publish_pkg
description = Toolshed test fixture for publish metadata validation
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.12
packages = find:
install_requires =
    aiohttp>=3.8.1
    packaging>=23.0
    pyyaml

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    toolshed-test-publish-pkg = _test_publish_pkg:main

[options.package_data]
_test_publish_pkg = py.typed

[options.packages.find]
include =
    _test_publish_pkg
    _test_publish_pkg.*
exclude =
    build.*
    dist.*
