[metadata]
name = aio.api.github
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/py/aio.api.github
description = Wrapper around gidgethub
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Typing :: Typed

[options]
python_requires = >=3.12
packages = find_namespace:
install_requires =
    abstracts>=0.2.0
    aio.core>=0.11.1
    aiohttp>=3.9.0
    gidgethub>=5.4.0
    multidict>=6.0.2
    packaging>=23.0
    yarl>=1.7.2

[options.extras_require]
test =
    pytest>=7.4.0
    pytest-abstracts>=0.1.1
    pytest-asyncio>=0.23.3
    pytest-coverage
    pytest-iters>=0.1.0
    pytest-patches>=0.1.0
lint = flake8>=6.1.0
types =
    mypy>=1.6.0
publish = wheel>=0.41.0

[options.package_data]
aio.api.github = py.typed

[options.packages.find]
include =
    aio.api.github
    aio.api.github.*
