[metadata]
name = aio.core
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/py/aio.core
description = A collection of functional utils for asyncio
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed

[options]
python_requires = >=3.12
packages = find_namespace:
install_requires =
    abstracts>=0.2.0
    pyyaml
    trycast>=0.7.3

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-iters
    pytest-patches
lint = flake8
types =
    mypy
publish = wheel

[options.package_data]
aio.core = py.typed

[options.packages.find]
include =
    aio.core
    aio.core.*
exclude =
    build.*
    tests.*
    dist.*
