[metadata]
name = dependatool
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/py/dependatool
description = Dependabot configuration checker (pip, docker, gomod, npm) used in Envoy proxy's CI
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed

[options]
python_requires = >=3.12
packages = find:
install_requires =
    abstracts>=0.2.0
    aio.core>=0.11.0
    aio.run.checker>=0.6.0

[options.extras_require]
test =
    pytest>=7.4.0
    pytest-coverage
    pytest-patches>=0.1.0
lint = flake8>=6.1.0
types =
    mypy>=1.6.0
    mypy-abstracts>=0.1.1
publish = wheel>=0.41.0

[options.package_data]
dependatool = py.typed

[options.entry_points]
console_scripts =
    dependatool = dependatool:cmd

[options.packages.find]
include =
    dependatool
    dependatool.*
