[metadata]
name = envoy.base.utils
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/py/envoy.base.utils
description = A collection of utils used in Envoy proxy's CI
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed

[options]
python_requires = >=3.12
packages = find_namespace:
install_requires =
    abstracts>=0.2.0
    aio.core>=0.11.0
    aio.api.github>=0.3.0
    aio.run.runner>=0.4.0
    aiohttp>=3.8.1
    frozendict
    jinja2
    multidict>=6.0.2
    orjson
    packaging>=23.0
    protobuf
    python-gnupg
    pyyaml
    trycast>=0.7.3
    yarl>=1.7.2
    zstandard

[options.extras_require]
test =
    pytest
    pytest-abstracts>=0.1.0
    pytest-asyncio
    pytest-coverage
    pytest-iters>=0.1.0
    pytest-patches>=0.1.0
lint = flake8
types =
    mypy
    types-frozendict
    types-orjson
    types-protobuf
    types-pyyaml
publish = wheel

[options.package_data]
envoy.base.utils = py.typed

[options.entry_points]
console_scripts =
    envoy.data_env = envoy.base.utils:data_env_cmd
    envoy.fetch = envoy.base.utils:fetch_cmd
    envoy.jinja_env = envoy.base.utils:jinja_env_cmd
    envoy.parallel = envoy.base.utils:parallel_cmd
    envoy.project = envoy.base.utils:project_cmd
    envoy.project_data = envoy.base.utils:project_data_cmd

[options.packages.find]
include =
    envoy.base.utils
    envoy.base.utils.*
