[metadata]
name = envoy.code.check
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/py/envoy.code.check
description = Code checker used in Envoy proxy's CI
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed

[options]
python_requires = >=3.12
packages = find_namespace:
install_requires =
    abstracts>=0.2.0
    aio.core>=0.11.0
    aio.run.checker>=0.6.0
    envoy.base.utils>=0.5.10
    flake8>=6
    packaging>=23.0
    pep8-naming
    yamllint
    yapf

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-iters>=0.1.0
    pytest-patches>=0.1.0
lint = flake8
types =
    mypy
    mypy-abstracts>=0.1.0
publish = wheel

[options.package_data]
envoy.code.check = py.typed

[options.entry_points]
console_scripts =
    envoy.code.check = envoy.code.check:run

[options.packages.find]
include =
    envoy.code.check
    envoy.code.check.*
