[metadata]
name = envoy.dependency.check
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/py/envoy.dependency.check
description = Dependency checker used in Envoy proxy CI
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed

[options]
python_requires = >=3.12
packages = find_namespace:
install_requires =
    abstracts>=0.2.0
    aio.api.github>=0.3.1
    aio.core>=0.11.1
    aio.run.checker>=0.6.0
    aiohttp>=3.12.14
    multidict>=6.0.2
    envoy.base.utils>=0.6.0
    gidgethub>=5.3.0
    jinja2>=3.1.6
    packaging>=23.0
    yarl>=1.7.2

[options.extras_require]
test =
    pytest>=7.4.0
    pytest-asyncio>=0.23.3
    pytest-cov
    pytest-iters>=0.1.0
    pytest-patches>=0.1.0
lint = flake8>=6.1.0
types =
    mypy>=1.6.0
    mypy-abstracts>=0.1.1
publish = wheel>=0.41.0

[options.package_data]
envoy.dependency.check = py.typed

[options.entry_points]
console_scripts =
    envoy.dependency.check = envoy.dependency.check:run

[options.packages.find]
include =
    envoy.dependency.check
    envoy.dependency.check.*
