[metadata]
name = envoy.distribution.distrotest
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/py/envoy.distribution.distrotest
description = Deprecated: this package is no longer published as a standalone distribution; functionality now ships as part of envoy.distribution.verify. See the README.
long_description = file: README.rst
classifiers =
    Development Status :: 7 - Inactive
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.5
py_modules = envoy.distribution.distrotest
packages = find_namespace:
install_requires =
    aiodocker>=0.25.0
    aio.run.checker>=0.5.8
    envoy.base.utils>=0.5.10
    envoy.docker.utils>=0.0.2

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-patches>=0.1.0
lint = flake8
types = mypy
publish = wheel

[options.package_data]
* = py.typed
envoy.distribution.distrotest =
    distrotest.yaml
    distrotest.sh

[options.packages.find]
include = envoy.*
exclude =
    build.*
    tests.*
    dist.*
