[metadata]
name = envoy.distribution.release
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/py/envoy.distribution.release
description = Release publishing tool used in Envoy proxy's CI
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed

[options]
python_requires = >=3.12
packages = find_namespace:
install_requires =
    aio.run.runner>=0.4.0
    envoy.github.release>=0.1.0

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-patches>=0.1.0
lint = flake8
types =
    mypy
    mypy-abstracts>=0.1.0
publish = wheel

[options.package_data]
envoy.distribution.release = py.typed

[options.packages.find]
include =
    envoy.distribution.release
    envoy.distribution.release.*

[options.entry_points]
console_scripts =
    envoy.distribution.release = envoy.distribution.release:cmd
