[metadata]
name = envoy.distribution.repo
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/308a7b16d2f47068be9513c75f49f7912862a7b6/py/envoy.distribution.repo
description = Deprecated: this package is no longer maintained. See the README.
long_description = file: README.rst
classifiers =
    Development Status :: 7 - Inactive
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.5
py_modules = envoy.distribution.repo
packages = find_namespace:
install_requires =
    abstracts>=0.2.0
    aio.core>=0.11.0
    aio.run.runner>=0.4.0
    envoy.base.utils>=0.5.10
    envoy.github.abstract>=0.0.22
    envoy.github.release>=0.0.14

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-patches>=0.1.0
lint = flake8
types =
    mypy
    mypy-abstracts>=0.1.0
publish = wheel

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    envoy.distribution.repo = envoy.distribution.repo:cmd
