[metadata]
name = envoy.distribution.verify
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/py/envoy.distribution.verify
description = Package distribution verification tool used in Envoy proxy CI
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed

[options]
python_requires = >=3.12
packages = find_namespace:
install_requires =
    aio.run.checker>=0.6.1
    aiodocker>=0.25.0
    envoy.base.utils>=0.6.7
    envoy.docker.utils>=0.1.1

[options.extras_require]
test =
    pytest>=7.4.0
    pytest-asyncio>=0.23.3
    pytest-cov
    pytest-patches>=0.1.0
lint = flake8>=6.1.0
types = mypy>=1.6.0
publish = wheel>=0.41.0

[options.package_data]
envoy.distribution.verify = py.typed
envoy.distribution.distrotest =
    py.typed
    distrotest.yaml
    distrotest.sh

[options.entry_points]
console_scripts =
    envoy.distribution.verify = envoy.distribution.verify:cmd

[options.packages.find]
include =
    envoy.distribution.distrotest
    envoy.distribution.distrotest.*
    envoy.distribution.verify
    envoy.distribution.verify.*
