[metadata]
name = envoy.docs.literalinclude
version = file: VERSION
author = Envoy Maintainers
author_email = envoy-maintainers@googlegroups.com
maintainer = Envoy Maintainers
maintainer_email = envoy-maintainers@googlegroups.com
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/envoy.docs.literalinclude
description = Tool to check and fix literalinclude line numbers in RST documentation
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Quality Assurance
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.12
packages = find_namespace:
install_requires =

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    literalinclude-check = envoy.docs.literalinclude.cmd:main
